--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
 	
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	
 	height: 50vh;
 	background: #a17757;
 	}
@@ -10,4 +8,7 @@ body {
 		color: aliceblue;
 		margin-top: -70px;
 		margin-left: 200px;
+	}
+	input{
+		 accent-color: rgb(41, 167, 25);
 	}
